New in 1.42:
- Beta Version -
NEW: Update warnings every second
NEW: Show "Stop" in front of Safety Stop

New in 1.41:
- Beta Version -
NEW: Ceiling display (GF_hi based) in divemode
NEW: Support for C3 hardware
CHANGE: Show heading with leading zeros
BUGFIX: Do not show "GF info" for non-GF modes
BUGFIX: Minor display allignment changes

New in 1.40:
CHANGE: Minor language updates
NEW: Show a Safety Stop if enabled (Menu "Deco Parameters")
BUGFIX: dive profile recording issue in OC mode
BUGFIX: OSTC settings via USB issues
BUGFIX: CNS in deco planner

New in 1.30:
NEW: Show event "Bailout" in internal logbook
CHANGE: Always compute bailout plan based on all active gases
CHANGE: Re-select last diluent when returning from bailout to OC
BUGFIX: Show "*" always in front of the initial Setpoint 1

New in 1.26:
BUGFIX: compass calibration does now timeout automatically after 60s
BUGFIX: decoplan re-calculation in bailout case

New in 1.25:
BUGFIX: No average depth for end-of-dive portion (<1m)
BUGFIX: Show "CC Diluents" in logbook instead of OC Gas List
NEW: automatic compass gain makes calibration quicker
CHANGE: Battery percent setpoints adjusted to worst case current consumption

New in 1.24:
CHANGE: Minor french translation
CHANGE: No warning sign for selected aGF
CHANGE: Show battery warning sign for less then 10% battery capacity only
CHANGE: Color schemes improved

New in 1.23:
BUGFIX: Reset Logbook did not reset Logbook TOC properly

New in 1.22:
BUGFIX: Potential bug to freeze the OSTC3 after battery change or update

New in 1.21:
CHANGE: French Translations, again
BUGFIX: Fix cursor in "New Battery" menu
NEW: Show serial number and firmware version in main menu
CHANGE: "Reset all" returns to surface mode
CHANGE: Single press surfacemode menu

New in 1.20:
Stable release

New in 1.12:
BUGFIX: Maintain last selected customview in surface mode
BUGFIX: Set Day for months <31 days
CHANGE: Some French Translations
CHANGE: Default Future TTS=0 (Disabled)