@@ -2,6 +2,7 @@ New in 1.42:
 - Beta Version -
 NEW: Update warnings every second
 NEW: Show "Stop" in front of Safety Stop
+BUGFIX: Start dive mode simulator in correct depth
 
 New in 1.41:
 - Beta Version -
